@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype orto

skinparam classAttributeIconSize "1"

package "UI" <<Folder>> {
    class RegisterGreenSpaceUI {
    }
}


package "Controller" <<Folder>> {

    class RegisterGreenSpaceController {
        + RegisterGreenSpaceController(greenSpaceRepository, collaboratorRepository)
        + registerGreenSpace(type,name,area,streetName,postCode)
        - getGSMFromSession()

    }

}

'left to right direction
package "Domain" <<Folder>> {

    package "Domain.Application" <<Folder>> {

        class ApplicationSession
        {
            + static getInstance()
            + getCurrentSession()
        }

        class UserSession
        {
            + getUserEmail()
        }
    }

    package "Domain.Model" <<Folder>> {

        class GreenSpace {
            - String name
            - int area
            - Address

            + GreenSpace(name,area,streetName,postCode)
            - validationGreenSpace()
        }

        class Collaborator {
                -String name
                -List<Skill> skill
                -Job job
                -Date dateOfBirth
                -Date admissionDate
                -Address address
                -Document document
                -String phoneNumber
                -String email
                -int taxpayer

                + Collaborator(name, job, dateOfBirth, admissionDate, address, document, phoneNumber, email, taxpayer)
        }

        class Address {
            -String streetName
            -int postCode
            -int doorNumber

            +Address(streetName, postCode, doorNumber)
            +Address(streetName, postCode)
            -validateAddress(address)
        }

        class GreenSpaceManager {
            - List<GreenSpace> managesGreenPlaceList

            + GreenSpaceManager()
            + addListManagerGreenSpace(GreenSpace)

        }

        class Garden{
            + Garden(super)
        }

        class MediumPark{
            + MediumPark(super)
        }

        class LargePark{
            + LargePark(super)
        }
    }

    package "Domain.Repository" <<Folder>> {

        class Repositories {

            - Repositories()
            + getInstance() : Repositories
            + getGreenSpaceRepository()
            + getCollaboratorRepository()
        }

        class CollaboratorRepository {
            - List <Collaborator> collaboratorList

            + getCollaboratorByEmail(greenSpace)
        }

        class GreenSpaceRepository {
            - List <GreenSpace> greenSpaceList

            - addGreenSpace(greenSpace)
            - validationAllGreenSpace(greenSpace)
            + registerGreenSpace(name,area,streetName,postCode)
        }
    }
}

'-------------------Instance-------------------
Repositories -> Repositories : instance
ApplicationSession -> ApplicationSession : instance

'-------------------UI-------------------
RegisterGreenSpaceUI ..> RegisterGreenSpaceController

'-------------------Controller-------------------
RegisterGreenSpaceController ...> Repositories : repositories
RegisterGreenSpaceController ...> ApplicationSession
RegisterGreenSpaceController ...> UserSession
RegisterGreenSpaceController ...> GreenSpaceRepository
RegisterGreenSpaceController ...> CollaboratorRepository
RegisterGreenSpaceController ...> Collaborator
RegisterGreenSpaceController ...> GreenSpace

'-------------------ApplicationSession-------------------
ApplicationSession --> "1" UserSession : userSession

'-------------------Repositories-------------------
Repositories --> "1" GreenSpaceRepository : GreenSpaceRepository
Repositories --> "1" CollaboratorRepository : CollaboratorRepository

'-------------------CollaboratorRepository-------------------
CollaboratorRepository "1"  -> "*" Collaborator : collaborator

'-------------------GreenSpaceRepository-------------------
GreenSpaceRepository "1" -> "*" GreenSpace : greenSpace

'-------------------Collaborator-------------------
Collaborator <|-- GreenSpaceManager

'-------------------Green Space Manager-------------------
GreenSpaceManager <- "*" GreenSpace : register/manages

'-------------------GreenSpace-------------------
GreenSpace <|-- Garden
GreenSpace <|-- MediumPark
GreenSpace <|-- LargePark

GreenSpace "1" *-- "1" Address : is located in




@enduml